# 03-env

./: INTEGRITY.md  Integrity.md  LICENSE  README.md  config.json  hw3-env.cabal  stack.yaml
.github/classroom/: autograding.json
src/: Hw3.hs
tests/: Test.hs
