name:                hw3-env 
version:             0.1.0.0
synopsis:            Starter code for CSE114A homework/03-env
license:             MIT
license-file:        LICENSE
author:              CSE114A Course Staff
maintainer:          CSE114A Course Staff
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     Hw3 

  -- other-extensions:
  build-depends:       array,
                       base

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    random,
                    tasty,
                    tasty-hunit,
                    hw3-env
  other-modules:    Common
